--- a/src/app/form-validation.component.html
+++ b/src/app/form-validation.component.html
@@ -74,7 +74,7 @@
                     Pin Code should be of 6 digits!
                 </div>
             </div>
-            <div *ngFor="let code of code"> {{this.code[0].Status[0]}} </div>
+            <div *ngFor="let code of code"> {{this.code[0].Status}} </div>
         </div>
     
         <div class="form-group">        
